Fix Find a Mentor page on IE #664

--- a/app/assets/stylesheets/_mentor_search.scss
+++ b/app/assets/stylesheets/_mentor_search.scss
@@ -56,18 +56,18 @@
 }
 
 .mentor-search__mentors-wrapper {
-  display: flex;
-  flex-wrap: wrap;
+  @include clearfix;
 }
 
 .mentor {
   background-color: white;
   border-radius: 0.25rem;
   box-shadow: 0 2px 2px rgba(black, 0.1);
+  float: left;
   margin-bottom: 1rem;
   padding: 1rem 1rem 1.25rem;
   position: relative;
-  width: calc((100% / 3) - (2rem / 3));
+  width: calc(33.3% - (2rem / 3));
 
   &:not(:nth-child(3n)) {
     margin-right: 1rem;
